:bug: Adding flex-direction to tab-content
This prevents long elements such as pre and code blocks that have a long string of text in them from overflowing off the container of the tab-content

--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -3,6 +3,7 @@
         position: relative;
         overflow: hidden;
         display: flex;
+        flex-direction: column;
         .tab-item {
             flex-shrink: 0;
             flex-basis: 100%;
